After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754427 - Title box should never enter title mode when there is no title
Title box should never enter title mode when there is no title
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.16.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-02 02:29 UTC by Michael Catanzaro
Modified: 2015-09-02 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EphyTitleBox: Escape should not work when there's no title (1.85 KB, patch)
2015-09-02 03:27 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-09-02 02:29:17 UTC
* View some pdf: https://www.usenix.org/system/files/1401_08-12_mickens.pdf
* Click in the location entry
* Press escape

Now the title box is visible, but there is no title, which looks bad. It's because we forgot to check for that before calling ephy_title_box_set_mode in ephy_title_box_entry_key_press_cb. We should really check the title inside _set_mode to make sure this can't ever happen, then we don't need checks all over the place.
Comment 1 Michael Catanzaro 2015-09-02 03:27:11 UTC
Created attachment 310457 [details] [review]
EphyTitleBox: Escape should not work when there's no title

Be careful to not allow switching to title mode when the page has no
title.
Comment 2 Carlos Garcia Campos 2015-09-02 06:18:01 UTC
Review of attachment 310457 [details] [review]:

Makes sense, thanks.
Comment 3 Michael Catanzaro 2015-09-02 13:25:29 UTC
Attachment 310457 [details] pushed as 01014b8 - EphyTitleBox: Escape should not work when there's no title