EphyTitleBox: Escape should not work when there's no title

Be careful to not allow switching to title mode when the page has no
title.

https://bugzilla.gnome.org/show_bug.cgi?id=754427